Refactor GlobalExceptionHandler to improve error tracking with detailed logging; update TransactionDao date range filters